2. Cert-manager/Tutorial/httpproxy.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kuard
namespace: kuard
spec:
  virtualhost:
    fqdn: kuard.bhs-consulting.com
    tls:
      secretName: kuard-tls-with-lets-encrypt
  routes:
  - services:
      - name: kuard
    port: 80
  conditions:
      - prefix: /
