2. Cert-manager/Tutorial/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
spec:
  tls:
  - hosts:
    - kuard.bhs-consulting.com
    secretName: kuard-tls-with-lets-encrypt
  rules:
  - host: kuard.bhs-consulting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
